--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -28,6 +28,27 @@ body{
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
+#search{
+ display: flex;
+ gap: 5px;
+ padding: 15px 7px 15px 7px;
+}
+#search-bar{
+  width: 100%;
+  padding-left: 15px;
+  font-size: 18px;
+  border-radius: 18px;
+  background-color: rgb(246, 241, 241);
+}
+#profile{
+  padding: 5px;
+  display: flex;
+  gap: 4px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 #bottom-header{
   display: grid;
 grid-template-columns: repeat(2, 1fr);
@@ -87,6 +108,7 @@ grid-template-columns: repeat(2, 1fr);
         }
         #drop-down-menu-container label, #menu{
           background-color: rgb(82, 187, 235);
+          text-align: center;
         } 
         
         #article{
