--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,15 +29,21 @@ body{
 }
 #search{
  display: flex;
- gap: 5px;
+ justify-content: center;
+ align-items: center;
+ gap: 10px;
  padding: 15px 7px 15px 7px;
 }
 #search-bar{
   width: 100%;
+  height: 70%;
   padding-left: 15px;
   font-size: 18px;
   border-radius: 18px;
   background-color: rgb(246, 241, 241);
+}
+#menu{
+  border: 0px;
 }
 #profile{
   padding: 5px;
@@ -93,19 +99,92 @@ grid-template-columns: repeat(2, 1fr);
     padding:3px;
     gap: 3px;
   }
+  #menu-container{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 40px;
+    row-gap: 50px;
+
+  }
+  
+  #menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 50px;
+  }
+  #menu-list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    
+  }
+  /* menu styles */
+  #home{
+    list-style-type: "🏠" ;
+    padding-left: 10px;
+  }
+  #pro{
+    list-style-type: "👤" ;
+    padding-left: 10px;
+  }
+  #message{
+    list-style-type: "💬" ;
+    padding-left: 10px;
+  }
+  #history{
+    list-style-type: "📚" ;
+    padding-left: 10px;
+  }
+  #tasks{
+    list-style-type: "🗒️" ;
+    padding-left: 10px;
+  }
+  #communities{
+    list-style-type: "👥" ;
+    padding-left: 10px;
+  }
+  
+  #setting{
+    list-style-type: "🛠️" ;
+    padding-left: 10px;
+  }
+  #support{
+    list-style-type: "📞" ;
+    padding-left: 10px;
+  }
+  #privacy{
+    list-style-type: "🔐" ;
+    padding-left: 10px;
+  }
+  .menu-item{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 550;
+  }
+  .title{
+    color: rgb(255, 255, 255);
+  }
+  #settings{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+  }
   #drop-down-menu-container{
     display: none;
-  }
-  #menu-container{
-    display: grid;
-    grid-template-rows: 1fr 4fr;
-  }
+  }  
   #article{
     display: grid;
     grid-column: 2/3;
+    grid-row: 2/3;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(fit-content, 1fr));
     padding: 10px;
-    gap: 3px;
+    gap: 10px;
+    overflow: auto;
   }
   .article{
           display: flex;
@@ -119,19 +198,20 @@ grid-template-columns: repeat(2, 1fr);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
     border-radius: 8px;
     background-color: whitesmoke;
+    padding: 15px;
   }
 #news{
   display: grid;
     grid-column: 3/4;
+    grid-row: 2/3;
     grid-template-rows: repeat(2, 1fr);
-    padding: 3px;
-    gap: 3px;
+    padding: 10px;
+    gap: 10px;
 }
 
-@media only screen and (max-width: 715px){
+@media only screen and (max-width: 800px){
     body{
         padding: 5px;
         display: grid;
@@ -163,7 +243,6 @@ grid-template-columns: repeat(2, 1fr);
          overflow-x: auto;
           grid-column: 1/2;
           grid-row: 3/4;
-          gap: 10px;
         }
         
         .article{
