--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,7 +9,7 @@ html, body{
 }
 body{
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr 2rem;
     background-color: rgb(210, 209, 209);
 }
@@ -90,6 +90,7 @@ grid-template-columns: repeat(2, 1fr);
   padding: 5px;
   border-radius: 15px;
 }
+
 #side-bar{
   display: grid;
   grid-template-rows: 1fr;
@@ -179,13 +180,22 @@ grid-template-columns: repeat(2, 1fr);
   }  
   #article{
     display: grid;
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 1/2;
+    grid-row: 1/2;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(fit-content, 1fr));
     padding: 10px;
     gap: 10px;
     overflow: auto;
+    height: fit-content;
+    text-overflow: ellipsis;
+  }
+  #main{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
   .article{
           display: flex;
@@ -205,11 +215,15 @@ grid-template-columns: repeat(2, 1fr);
   }
 #news{
   display: grid;
-    grid-column: 3/4;
-    grid-row: 2/3;
+    grid-column: 2/3;
+    grid-row: 1/3;
     grid-template-rows: repeat(2, 1fr);
     padding: 10px;
     gap: 10px;
+    height: fit-content;
+    background-color: rgb(210, 209, 209);
+    box-shadow: rgba(0, 0, 0, 0.309) 0px 10px 10px;
+    text-overflow: ellipsis;
 }
 
 @media only screen and (max-width: 650px){
@@ -218,15 +232,24 @@ grid-template-columns: repeat(2, 1fr);
         display: grid;
         gap: 5px;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 0.5fr 2fr 2fr;
+        grid-template-rows: 1fr 1fr 4fr;
     }
     #header{
         grid-column: 1/2;
         grid-row: 1/2;
+        position: sticky;
+        top: 0px;
       }
       #side-bar{
         grid-column: 1/2;
           grid-row: 2/3;
+        }
+        #main{
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-row: 2fr 1fr;
+          grid-column: 1/2;
+          grid-row: 3/4;
         }
         #menu-container{
           display: none;
@@ -250,20 +273,29 @@ grid-template-columns: repeat(2, 1fr);
         }
         
         #article{
-         display: flex;
+         display: grid;
          overflow-x: auto;
           grid-column: 1/2;
-          grid-row: 3/4;
+          grid-row: 1/2;
         }
+        
         
         .article{
           display: flex;
           flex: 0 0 100%;
           width: 100%;
+          
         }
         
       #news{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
         grid-column: 1/2;
-          grid-row: 4/5;
+          grid-row: 2/3;
+          position: sticky;
+          bottom: 0px;
+          box-shadow: rgba(0, 0, 0, 0.401) 0px -10px 20px;
+          overflow: auto;
       }
 }
